# drachtio-freeswitch-modules

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile.am.patch  README.md  build.sh  configure.ac.patch  modules.conf.in.patch  modules.conf.patch  modules.conf.vanilla.xml.patch
ansible-role-drachtio-freeswitch/: LICENSE  README.md  ansible.cfg  playbook.retry  playbook.yaml
ansible-role-drachtio-freeswitch/defaults/: main.yml
ansible-role-drachtio-freeswitch/files/: Makefile.am.lws.patch  Makefile.am.patch  conference.conf.xml  configure.ac.lws.patch  configure.ac.patch  memmove.m4  mod_audio_fork  mod_dialogflow  mod_google_dialogflow  mod_google_speech  mod_google_transcribe  mod_google_tts  modules.conf  modules.conf.1  modules.conf.2  modules.conf.in.patch  modules.conf.vanilla.xml.patch
ansible-role-drachtio-freeswitch/handlers/: main.yml
ansible-role-drachtio-freeswitch/tasks/: grpc.yaml  grpc.yml  lws.yaml  main.yaml  main.yml
ansible-role-drachtio-freeswitch/templates/: acl.conf.xml.j2  event_socket.conf.xml.j2  freeswitch.service.j2  freeswitch_log_rotation.j2  mrf_dialplan.xml.j2  mrf_ipv6_sip_profile.xml.j2  mrf_sip_profile.xml.j2
ansible-role-drachtio-freeswitch/vars/: main.yml
examples/: audio_fork.js  aws_transcribe.js  dialogflow.js  google_transcribe.js  google_tts.js  package-lock.json  package.json  ws_server.js
examples/config/: default.json
examples/google-tts/: app.js  package-lock.json  package.json
files/: Makefile.am.grpc.patch  Makefile.am.patch  acl.conf.xml.j2  configure.ac.grpc.patch  configure.ac.patch  event_socket.conf.xml.j2  freeswitch.service.j2  freeswitch_log_rotation.j2  modules.conf.in.grpc.patch  modules.conf.in.patch  modules.conf.patch  modules.conf.vanilla.xml.grpc  modules.conf.vanilla.xml.grpc.patch  modules.conf.vanilla.xml.lws  modules.conf.vanilla.xml.patch  mrf_dialplan.xml.j2  mrf_ipv6_sip_profile.xml.j2  mrf_sip_profile.xml.j2
modules/mod_assemblyai_transcribe/: Makefile.am  aai_transcribe_glue.cpp  aai_transcribe_glue.h  audio_pipe.cpp  audio_pipe.hpp  base64.hpp  mod_assemblyai_transcribe.c  mod_assemblyai_transcribe.h
modules/mod_audio_fork/: Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  base64.hpp  lws_glue.cpp  lws_glue.h  mod_audio_fork.c  mod_audio_fork.h  parser.cpp  parser.hpp  session_handler.hpp
modules/mod_aws_lex/: Makefile.am  README.md  aws_lex_glue.cpp  aws_lex_glue.h  mod_aws_lex.c  mod_aws_lex.h  parser.cpp  parser.h
modules/mod_aws_transcribe/: Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  aws_transcribe_glue.cpp  aws_transcribe_glue.h  aws_transcribe_glue.h.sdk  crc.h  mod_aws_transcribe.c  mod_aws_transcribe.h  transcribe_manager.cpp  transcribe_manager.hpp
modules/mod_azure_transcribe/: Makefile.am  README.md  azure_transcribe_glue.cpp  azure_transcribe_glue.h  mod_azure_transcribe.c  mod_azure_transcribe.h
modules/mod_cobalt_transcribe/: Makefile.am  README.md  cobalt_glue.cpp  cobalt_glue.h  mod_cobalt_transcribe.c  mod_cobalt_transcribe.h  simple_buffer.h
modules/mod_deepgram_transcribe/: Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  dg_transcribe_glue.cpp  dg_transcribe_glue.h  mod_deepgram_transcribe.c  mod_deepgram_transcribe.h
modules/mod_dialogflow/: Makefile.am  README.md  google_glue.cpp  google_glue.h  mod_dialogflow.c  mod_dialogflow.h  parser.cpp  parser.h
modules/mod_dialogflow/conf/autoload_configs/: dialogflow.xml
modules/mod_google_dialogflow/: google_glue.h  mod_dialogflow.h
modules/mod_google_speech/: Makefile.am  google_glue.cpp
modules/mod_google_transcribe/: Makefile.am  README.md  generic_google_glue.h  google_glue.cpp  google_glue.h  google_glue_v1.cpp  google_glue_v2.cpp  gstreamer.h  mod_google_transcribe.c  mod_google_transcribe.h  simple_buffer.h
modules/mod_google_transcribe/conf/autoload_configs/: google_transcribe.xml
modules/mod_google_tts/: Makefile.am  README.md  google_glue.cpp  google_glue.h  mod_google_tts  mod_google_tts.c  mod_google_tts.h
modules/mod_google_tts/conf/autoload_configs/: google_tts.xml
modules/mod_ibm_transcribe/: LICENSE  Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  ibm_transcribe_glue.cpp  ibm_transcribe_glue.h  mod_ibm_transcribe.c  mod_ibm_transcribe.h  parser.hpp
modules/mod_jambonz_transcribe/: LICENSE  Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  jb_transcribe_glue.cpp  jb_transcribe_glue.h  mod_jambonz_transcribe.c  mod_jambonz_transcribe.h
modules/mod_nuance_transcribe/: Makefile.am  README.md  mod_nuance_transcribe.c  mod_nuance_transcribe.h  nuance_glue.cpp  nuance_glue.h
modules/mod_nuance_transcribe/protos/nuance/asr/v1/: recognizer.proto  resource.proto  result.proto
modules/mod_nuance_transcribe/protos/nuance/asr/v1beta1/: training.proto
modules/mod_nuance_transcribe/protos/nuance/rpc/: error_details.proto  status.proto  status_code.proto
modules/mod_nvidia_transcribe/: Makefile.am  mod_nvidia_transcribe.c  mod_nvidia_transcribe.h  nvidia_glue.cpp  nvidia_glue.h
modules/mod_simple_vad/: Makefile.am  mod_simple_vad.c
modules/mod_soniox_transcribe/: Makefile.am  mod_soniox_transcribe.c  mod_soniox_transcribe.h  soniox_glue.cpp  soniox_glue.h
